--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "appwrite": "^21.4.0",
     "firebase": "^12.6.0",
     "lucide-react": "^0.554.0",
+    "node-appwrite": "^20.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
