--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node-appwrite": "^20.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-helmet-async": "^2.0.5",
+    "react-helmet-async": "^2.1.0-beta.6",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "react-scripts": "^5.0.1",
