--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "tailwindcss": "^4.1.17"
+  },
+  "overrides": {
+    "ajv": "^8.12.0"
   }
 }
