--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-appwrite": "^20.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
